--- a/lib/PDL/DateTime.pod
+++ b/lib/PDL/DateTime.pod
@@ -136,7 +136,8 @@ Supported formats - see L<Time::Moment|Time::Moment/from_string>.
  my $p = PDL::DateTime->new_sequence($start, $count, $unit, $step);
  # $start .. ISO 8601 date time string (starting datetime) or 'now'
  # $count .. length of the sequence (incl. starting point)
- # $unit  .. step unit 'year', 'month', 'week', 'day', 'hour', 'minute', 'second'
+ # $unit  .. step unit 'year', 'quarter', 'month', 'week',
+ #                     'day', 'hour', 'minute', 'second'
  # $step  .. how many units there are between two seq elements (default: 1)
 
 =head2 double_epoch
@@ -218,11 +219,11 @@ Supported formats - see L<Time::Moment|Time::Moment/from_string>.
 
 =head2 dt_add
 
- my $p->dt_add($num, $unit);
+ my $p->dt_add($unit, $num);
  # adds $num datetime units
  # $num can be positive (addition) or negative (subtraction)
- # $unit .. "year", "month", "week", "day", "hour", "minute",
- #          "second", "millisecond", "microsecond"
+ # $unit .. 'year', 'quarter', 'month', 'week', 'day', 'hour',
+ #          'minute', 'second', 'millisecond', 'microsecond'
 
  my $p->dt_add(day => 2);
  # turns e.g. 2015-08-20T23:24:25.123456Z
@@ -239,12 +240,11 @@ Supported formats - see L<Time::Moment|Time::Moment/from_string>.
  #NOTE: supports also inplace
  $p->inplace->dt_add(day => 2);
 
-
 =head2 dt_truncate
 
  my $p->dt_truncate($unit);
- # $unit .. "year", "month", "week", "day", "hour", "minute",
- #          "second", "millisecond", "microsecond"
+ # $unit .. 'year', 'quarter', 'month', 'week', 'day', 'hour',
+ #          'minute', 'second', 'millisecond', 'microsecond'
 
  my $p->dt_truncate('minute');
  # turns e.g. 2015-08-20T23:24:25.123456Z
@@ -308,12 +308,96 @@ See L<Time::Moment|Time::Moment/strftime> (which we use for stringification) for
  #          "hour", "day", "week", "month", "quarter"
  #          or an empty string
 
+=head2 dt_startpoints
+
+Extract index values corresponding to the first observations given a period specified by C<$unit>
+
+ my $end_idx = $p->dt_startpoints($unit);
+ # $unit .. accepts same values as dt_truncate
+
+Example:
+
+ my $dt = PDL::DateTime->new_from_datetime([qw/
+    2015-03-24 2015-03-25 2015-03-28 2015-04-01
+    2015-04-02 2015-04-30 2015-05-01 2015-05-10
+ /]);
+
+ print $dt->dt_startpoints('month');
+ # prints: [0 3 6]
+
+ print $dt->dt_startpoints('quarter');
+ # prints: [0 3]
+
 =head2 dt_endpoints
 
+Extract index values corresponding to the last observations given a period specified by C<$unit>
+
  my $end_idx = $p->dt_endpoints($unit);
- # extract index values corresponding to the last observations
- # given a period specified by $unit
  # $unit .. accepts same values as dt_truncate
+
+Example:
+
+ my $dt = PDL::DateTime->new_from_datetime([qw/
+    2015-03-24 2015-03-25 2015-03-28 2015-04-01
+    2015-04-02 2015-04-30 2015-05-01 2015-05-10
+ /]);
+
+ print $dt->dt_endpoints('month');
+ # prints: [2 5 7]
+
+ print $dt->dt_endpoints('quarter');
+ # prints: [2 7]
+
+=head2 dt_slices
+
+Combines L</dt_startpoints> and L</dt_endpoints> and returns 2D piddle like this:
+
+ my $dt = PDL::DateTime->new_from_datetime([qw/
+    2015-03-24 2015-03-25 2015-03-28 2015-04-01
+    2015-04-02 2015-04-30 2015-05-01 2015-05-10
+ /]);
+
+ print $dt->dt_slices('month');
+ # [
+ #  [0 2]    ... start index == 0, end index == 2
+ #  [3 5]    ... start index == 3, end index == 5
+ #  [6 7]    ... start index == 6, end index == 7
+ # ]
+
+ print $dt->dt_slices('quarter');
+ # [
+ #  [0 2]
+ #  [3 7]
+ # ]
+
+=head2 dt_nperiods
+
+Calculate the number of periods specified by C<$unit> in a given time series.
+The resulting value is approximate, derived from counting the endpoints.
+
+ $dt->dt_nperiods($unit)
+ # $unit .. 'year', 'quarter', 'month', 'week', 'day', 'hour',
+ #          'minute', 'second', 'millisecond', 'microsecond'
+
+=head2 is_increasing
+
+  print $dt->is_increasing ? "is increasing" : "no";
+  #or
+  print $dt->is_increasing(1) ? "is strictly increasing" : "no";
+
+=head2 is_decreasing
+
+  print $dt->is_decreasing ? "is decreasing" : "no";
+  #or
+  print $dt->is_decreasing(1) ? "is strictly decreasing" : "no";
+
+=head2 is_uniq
+
+  print $dt->is_uniq ? "all items are uniq" : "no";
+
+=head2 is_regular
+
+  print $dt->is_regular ? "all periods between items are the same" : "no";
 
 =head1 SEE ALSO
 
