--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Changes for PDL-DateTime distribution
 
+0.002   2015/10/17
+        - new methods: dt_year, dt_quarter, dt_month, dt_day
+
 0.001   2015/10/16
         - initial version
