--- a/lib/PDL/DateTime.pod
+++ b/lib/PDL/DateTime.pod
@@ -1,6 +1,6 @@
 =head1 NAME
 
-PDL::DateTime - piddle for keeping high precision (microsecond) timestamps
+PDL::DateTime - A piddle for keeping high precision (microsecond) timestamps
 
 =head1 DESCRIPTION
 
@@ -188,7 +188,30 @@ Supported formats - see L<Time::Moment|Time::Moment/from_string>.
  # BEWARE: precision loss, before exporting the time is truncated to miliseconds!
  # returns Double piddle
 
+=head2 dt_year
+
+ my $y = $p->dt_year;
+ # returns: $y Short piddle (values 1 .. 9999)
+
+=head2 dt_quarter
+
+ my $m = $p->dt_quarter;
+ # returns: $m Byte piddle (values 1 .. 4)
+
+=head2 dt_month
+
+ my $m = $p->dt_month;
+ # returns: $m Byte piddle (values 1 .. 12)
+
+=head2 dt_day
+
+ my $d = $p->dt_day;
+ # returns: $d Byte piddle (values 1 .. 31)
+
 =head2 dt_ymd
+
+If you need all C<year>, C<month> and C<day> values it is more effective to use one C<dt_ymd> call
+instead of separately calling C<dt_year>, C<dt_month> and C<dt_day>.
 
  my ($y, $m, $d) = $p->dt_ymd;
  # returns 3 piddles: $y Short, $m Byte, $d Byte
@@ -221,7 +244,7 @@ Supported formats - see L<Time::Moment|Time::Moment/from_string>.
 =head2 dt_day_of_year
 
  my $wd = $p->dt_day_of_year;
- # returns Short piddle (values 1..366)
+ # returns Short piddle (values 1 .. 366)
 
 =head2 dt_add
 
